Css fixes (#83)
* make header bar fixed size

* make game join text visable

* make text on player create black

* fix base health not resetting on game restart

* fix lobby button being cut off at the bottom of iphone screen

* add window scroll to lobby

--- a/rushmore/app/resources/css/marketing.css
+++ b/rushmore/app/resources/css/marketing.css
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5, h6, label {
     /* Fixed menus normally have a border at the bottom. */
     border-bottom: none;    /* I need a higher z-index here because of the scroll-over effect. */
     z-index: 4;
-    height: 10%;
+    height: 60px;
 
 }
 .home-menu .pure-menu-heading {
@@ -105,6 +105,7 @@ h1, h2, h3, h4, h5, h6, label {
     border-radius: 5px;
     line-height: 1em;
     font: inherit;
+    width: 100%;
 }
 .deploy-button {
     background-color: white;
@@ -141,10 +142,8 @@ h1, h2, h3, h4, h5, h6, label {
     text-align: center;
 }
 
-#main-container p {
-    /*font-size: 18px;
-    font-weight: 100;
-    line-height: 1.2em;*/
+#main-container .splash-subhead {
+    color: black;
 }
 
 #main-container h1{
@@ -486,9 +485,9 @@ h1, h2, h3, h4, h5, h6, label {
 
 #lobby-footer {
     width: 100%;
-    height: 20vh;
+    height: 20%;
     position: fixed;
-    top: 80vh;
+    top: 80%;
     left: 0;
     /*background-color: red;*/
     color: white;
@@ -523,13 +522,13 @@ h1, h2, h3, h4, h5, h6, label {
 #blue-team-lobby-header{
     background: #446CB3;
     padding: 10px;
-    min-height: 40vh;
+    min-height: 40%;
 }
 
 #red-team-lobby-header{
     background: #D91E18;
     padding: 10px;
-    min-height: 40vh;
+    min-height: 40%;
 }
 
 #game-container {
